--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   http: ^0.12.1
   fluttertoast: ^7.0.1
+  flutter_statusbarcolor: ^0.2.3
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
