--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   fluttertoast: ^7.0.1
   flutter_statusbarcolor: ^0.2.3
   intl: ^0.16.1
+  progress_dialog: ^1.2.4
 
 dev_dependencies:
   flutter_test:
