--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   intl: ^0.16.1
   after_layout: ^1.0.7+2
   progress_dialog: ^1.2.4
+  shared_preferences: ^0.5.10
 
 dev_dependencies:
   flutter_test:
