--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   after_layout: ^1.0.7+2
   progress_dialog: ^1.2.4
   shared_preferences: ^0.5.10
+  flushbar: ^1.10.4
 
 dev_dependencies:
   flutter_test:
