--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^0.5.10
   flushbar: ^1.10.4
   rflutter_alert: ^1.0.8
+  image_picker: ^0.6.7+11
 
 dev_dependencies:
   flutter_test:
