--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   rflutter_alert: ^1.0.8
   image_picker: ^0.6.7+11
   file_picker: ^2.0.7
-  flutter_plugin_pdf_viewer: ^1.0.7
   path_provider: ^1.6.18
+  open_file: ^3.0.1
 
 dev_dependencies:
   flutter_test:
