--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   file_picker: ^2.0.7
   path_provider: ^1.6.18
   open_file: ^3.0.1
-  fl_chart: ^0.12.0
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_test:
