--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   path_provider: ^1.6.18
   open_file: ^3.0.1
   charts_flutter: ^0.9.0
+  firebase_messaging: ^7.0.3
 
 dev_dependencies:
   flutter_test:
