--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   open_file: ^3.0.1
   charts_flutter: ^0.9.0
   firebase_messaging: ^7.0.3
+  excel: ^1.1.5
 
 dev_dependencies:
   flutter_test:
