--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,9 @@ dependencies:
   path_provider: ^1.6.18
   open_file: ^3.0.1
   charts_flutter: ^0.9.0
+  firebase_core: ^0.5.2
   firebase_messaging: ^7.0.3
+  firebase_storage: ^5.2.0
   excel: ^1.1.5
 
 dev_dependencies:
