--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^0.5.2
   firebase_messaging: ^7.0.3
   firebase_storage: ^5.2.0
+  firebase_crashlytics: ^0.2.4
   url_launcher: ^5.7.10
   excel: ^1.1.5
 
