--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   after_layout: ^1.0.7+2
   progress_dialog: ^1.2.4
   shared_preferences: ^0.5.10
-  flushbar: ^1.10.4
+  another_flushbar: ^1.10.17
   rflutter_alert: ^1.0.8
   image_picker: ^0.6.7+11
   file_picker: ^2.0.7
