--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_crashlytics: ^0.2.4
   url_launcher: ^5.7.10
   excel: ^1.1.5
+  webview_flutter: ^2.0.4
 
 dev_dependencies:
   flutter_test:
